@@ -1,6 +1,6 @@
 /*
  * Aipo is a groupware program developed by Aimluck,Inc.
- * Copyright (C) 2004-2011 Aimluck,Inc.
+ * Copyright (C) 2004-2015 Aimluck,Inc.
  * http://www.aipo.com
  *
  * This program is free software: you can redistribute it and/or modify
@@ -16,7 +16,6 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-
 package com.aimluck.eip.account;
 
 import java.security.SecureRandom;
@@ -59,7 +58,7 @@ import com.aimluck.eip.util.ALEipUtils;
 
 /**
  * ユーザーアカウントの検索データを管理するためのクラスです。 <br />
- * 
+ *
  */
 public class AccountUserSelectData extends
     ALAbstractSelectData<TurbineUser, ALBaseUser> {
@@ -87,7 +86,7 @@ public class AccountUserSelectData extends
 
   /**
    * 初期化します。
-   * 
+   *
    */
   @Override
   public void init(ALAction action, RunData rundata, Context context)
@@ -110,7 +109,7 @@ public class AccountUserSelectData extends
 
   /**
    * アカウント一覧を取得します。 ただし、論理削除されているアカウントは取得しません。
-   * 
+   *
    * @param rundata
    * @param context
    * @return
@@ -137,7 +136,7 @@ public class AccountUserSelectData extends
 
   /**
    * 検索条件を設定した SelectQuery を返します。 <BR>
-   * 
+   *
    * @param rundata
    * @param context
    * @return
@@ -321,7 +320,7 @@ public class AccountUserSelectData extends
 
   /**
    * フィルタ用の <code>Criteria</code> を構築します。
-   * 
+   *
    * @param crt
    * @param rundata
    * @param context
@@ -364,7 +363,7 @@ public class AccountUserSelectData extends
   }
 
   /**
-   * 
+   *
    * @param id
    * @return
    */
@@ -382,7 +381,7 @@ public class AccountUserSelectData extends
   }
 
   /**
-   * 
+   *
    * @param id
    * @return
    */
@@ -409,7 +408,7 @@ public class AccountUserSelectData extends
   /**
    * @param obj
    * @return
-   * 
+   *
    */
   @Override
   protected Object getResultData(TurbineUser record) {
@@ -447,7 +446,7 @@ public class AccountUserSelectData extends
   @Override
   protected Object getResultDataDetail(ALBaseUser record) {
     try {
-      Integer id = new Integer(record.getUserId());
+      Integer id = Integer.valueOf(record.getUserId());
 
       AccountResultData rd = new AccountResultData();
       rd.initField();
@@ -484,7 +483,7 @@ public class AccountUserSelectData extends
 
   /**
    * @return
-   * 
+   *
    */
   @Override
   protected Attributes getColumnMap() {
@@ -499,7 +498,7 @@ public class AccountUserSelectData extends
   }
 
   /**
-   * 
+   *
    * @return
    */
   public String getCurrentPost() {
@@ -507,7 +506,7 @@ public class AccountUserSelectData extends
   }
 
   /**
-   * 
+   *
    * @return
    */
   public Map<Integer, ALEipPost> getPostMap() {
@@ -515,7 +514,7 @@ public class AccountUserSelectData extends
   }
 
   /**
-   * 
+   *
    * @return
    */
   public Map<Integer, FilterRole> getRoleMap() {
@@ -524,7 +523,7 @@ public class AccountUserSelectData extends
 
   /**
    * 登録ユーザー数を取得する．
-   * 
+   *
    * @return
    */
   public int getRegisteredUserNum() {
